<resources>
    <string name="app_name">AndroidChatClient</string>

    <string name="action_settings">Settings</string>

    <string name="enter_info">Please enter connection info</string>
    <string name="username_hint">Username</string>
    <string name="server_address_hint">Server IP</string>
    <string name="server_port_hint">Server Port</string>

    <string name="finish">Finish</string>
</resources>
