<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/enter_username"
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:layout_gravity="center" android:orientation="vertical"  >

    <TextView
        android:id="@+id/username" android:text="@string/enter_info"
        android:layout_width="wrap_content" android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_username" android:hint="@string/username_hint"
        android:layout_width="match_parent"  android:layout_height="wrap_content"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_server_ip" android:hint="@string/server_address_hint"
        android:layout_width="match_parent"  android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_server_port" android:hint="@string/server_port_hint"
        android:layout_width="match_parent"  android:layout_height="wrap_content" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_finish"
        android:text="@string/finish"/>

</LinearLayout>